# autoresearch-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: llm_config.py  settings.py  worker_registry.py
docs/: 01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  03_DATA_MODELS.md  04_AGENTS.md  05_WORKERS.md  06_WORKFLOW.md  07_API_REFERENCE.md  08_DEPLOYMENT.md  09_DEVELOPMENT.md  10_TESTING.md  11_SPRINT_PLAN.md  12_SESSION_SUMMARY.md  13_ADDITIONAL_SPRINT_NOTES.md  PROJECT_DOCUMENTATION.md
src/meta_agent/: controller.py  merger.py  orchestrator.py  planner.py  state_manager.py  strategy.py  supervisor.py
src/meta_agent/schemas/: __init__.py  brief_schema.py  plan_schema.py  result_schema.py  state_schema.py  task_schema.py  worker_schema.py
tests/: test_controller.py  test_llm_config.py  test_merger.py  test_orchestrator.py  test_planner.py  test_schemas.py  test_settings.py  test_state_manager.py  test_strategy.py  test_supervisor.py  test_worker_registry.py
